--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="icon" href="images/aspective_pp.png" type="image/x-icon" />
 <style>
 body, html {
     height: 100%;
