--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="icon" href="images/aspective_pp.png" type="image/x-icon" />
+    <title>Aspective Solutions | Countdown </title>
 <style>
 body, html {
     height: 100%;
