--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
     <link rel="icon" href="images/aspective_pp.png" type="image/x-icon" />
     <title>Aspective Solutions | Countdown </title>
+    
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97838479-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    
 <style>
 body, html {
     height: 100%;
